# SizeCheck

./: .gitignore  README.md  documenter.py  index.html  pyproject.toml  shapecheck.py  sizecheck.html  sizecheck.py  test_shapecheck.py  test_sizecheck.py
0.1.0/: sizecheck.html
0.2.0/: index.html  sizecheck.html
