[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sizecheck"
version = "0.1.0"
description = "Runtime shape validation for size-annotated Python code"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = [
    "torch>=1.8.0",
    "pytest>=6.0",
]

[project.urls]
Homepage = "https://github.com/samanklesaria/sizecheck"
Repository = "https://github.com/samanklesaria/sizecheck"
Issues = "https://github.com/samanklesaria/sizecheck/issues"

[tool.setuptools]
py-modules = ["sizecheck"]
